--- a/etc/dbus-1/system.d/org.yausbir.control.conf
+++ b/etc/dbus-1/system.d/org.yausbir.control.conf
@@ -3,7 +3,7 @@
  "http://www.freedesktop.org/standards/dbus/1.0/busconfig.dtd">
 <busconfig>
 
-  <!-- Only user root can own the vdr-dbus-service -->
+  <!-- Only user root can own the yausbir-dbus-service -->
   <policy user="root">
     <allow own="org.yausbir.control"/>
   </policy>
@@ -14,7 +14,7 @@
     <allow own="org.yausbir.control"/>
   </policy>
 
-  <!-- allow everyone to call vdr-frontend methods -->
+  <!-- allow everyone to call yausbir methods -->
   <policy context="default">
     <allow send_destination="org.yausbir.control"/>
     <allow receive_sender="org.yausbir.control"/>
